<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#114f5e"
    android:layout_height="match_parent"
    tools:context=".activities.CreateABackgroundActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />


    <ImageView
        android:id="@+id/topGreenPannel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/samplewalpaper"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/create_background_layout_margin_12"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/create_background_layout_margin_12"
        android:alpha="0.8"
        android:background="@drawable/custom_drop_shadow_drawable"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topGreenPannel">


      <ImageView
          android:id="@+id/userCreatedImage"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="24dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="24dp"
          android:layout_marginBottom="24dp"
          android:adjustViewBounds="true"
          android:padding="5dp"
          android:src="@drawable/createbitmap"
          app:layout_constraintBottom_toTopOf="@+id/width"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <EditText
          android:id="@+id/width"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="24dp"
          android:layout_marginBottom="16dp"
          android:alpha="0.6"
          android:background="@drawable/edittext_background"
          android:fontFamily="@font/gemunulibrebold"
          android:hint="@string/width_text"
          android:inputType="numberDecimal"
          android:textColor="@android:color/black"
          android:textColorHint="@android:color/black"
          android:textSize="18sp"
          app:layout_constraintBottom_toTopOf="@+id/height"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent" />

      <EditText
          android:id="@+id/height"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="24dp"
          android:layout_marginBottom="16dp"
          android:alpha="0.6"
          android:background="@drawable/edittext_background"
          android:fontFamily="@font/gemunulibrebold"
          android:hint="@string/height_text"
          android:inputType="numberDecimal"
          android:textColor="@android:color/black"
          android:textColorHint="@android:color/black"
          android:textSize="18sp"
          app:layout_constraintBottom_toTopOf="@+id/create"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

      <ImageView
          android:id="@+id/pickColor"
          android:layout_width="@dimen/create_background_color_picker_width_height"
          android:layout_height="@dimen/create_background_color_picker_width_height"
          android:layout_marginBottom="16dp"
          android:src="@drawable/ic_color_blue"
          app:layout_constraintBottom_toTopOf="@+id/useImage"
          app:layout_constraintStart_toStartOf="@+id/height" />

      <Button
          android:id="@+id/create"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_marginStart="@dimen/create_background_margin_70"
          android:layout_marginEnd="24dp"
          android:background="@drawable/border"
          android:fontFamily="@font/gemunulibrebold"
          android:text="@string/create_text"
          android:textColor="@color/colorAccent"
          android:textSize="18sp"
          app:layout_constraintBottom_toBottomOf="@+id/pickColor"
          app:layout_constraintEnd_toEndOf="@+id/height"
          app:layout_constraintStart_toEndOf="@+id/pickColor"
          app:layout_constraintTop_toTopOf="@+id/pickColor" />


      <Button
          android:id="@+id/useImage"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="24dp"
          android:layout_marginBottom="24dp"
          android:background="@drawable/border"
          android:fontFamily="@font/gemunulibrebold"
          android:paddingTop="@dimen/create_background_padding_10"
          android:paddingBottom="@dimen/create_background_padding_10"
          android:text="@string/use_image"
          android:textColor="@color/colorAccent"
          android:textSize="18sp"
          app:layout_constraintBottom_toBottomOf="@+id/imageView2"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

